@@ -4,6 +4,7 @@ import com.google.common.base.Stopwatch;
 import io.github.alien.roseau.Library;
 import io.github.alien.roseau.Roseau;
 import io.github.alien.roseau.RoseauException;
+import io.github.alien.roseau.RoseauOptions;
 import io.github.alien.roseau.api.model.API;
 import io.github.alien.roseau.api.model.SourceLocation;
 import io.github.alien.roseau.api.model.TypeDecl;
@@ -14,10 +15,7 @@ import io.github.alien.roseau.diff.changes.BreakingChangeKind;
 import io.github.alien.roseau.diff.formatter.BreakingChangesFormatter;
 import io.github.alien.roseau.diff.formatter.BreakingChangesFormatterFactory;
 import io.github.alien.roseau.diff.formatter.CsvFormatter;
-import io.github.alien.roseau.diff.formatter.HtmlFormatter;
-import io.github.alien.roseau.diff.formatter.MdFormatter;
 import io.github.alien.roseau.extractors.ExtractorType;
-import io.github.alien.roseau.extractors.MavenClasspathBuilder;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.core.config.Configurator;
@@ -30,7 +28,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -78,30 +75,52 @@ public final class RoseauCLI implements Callable<Integer> {
 	@Option(names = "--report", paramLabel = "<path>",
 		description = "Where to write the breaking changes report in --diff mode")
 	private Path reportPath;
-	@Option(names = "--format", defaultValue = "CSV",
+	@Option(names = "--format",
 		description = "Format of the report: ${COMPLETION-CANDIDATES}")
 	private BreakingChangesFormatterFactory format;
-	@Option(names = "--pom", paramLabel = "<path>",
-		description = "A pom.xml file to build a classpath from")
-	private Path pom;
 	@Option(names = "--classpath", paramLabel = "<path>[,<path>...]",
-		description = "A colon-separated list of JARs to include in the classpath (Windows: semi-colon)")
-	private String userClasspath;
+		description = "A colon-separated list of JARs to include in the classpath (Windows: semi-colon), " +
+			"shared by --v1 and --v2")
+	private String classpath;
+	@Option(names = "--pom", paramLabel = "<path>",
+		description = "A pom.xml file to build a classpath from, shared by --v1 and --v2")
+	private Path pom;
+	@Option(names = "--v1-classpath", paramLabel = "<path>[,<path>...]",
+		description = "A --classpath for --v1")
+	private String v1Classpath;
+	@Option(names = "--v2-classpath", paramLabel = "<path>[,<path>...]",
+		description = "A --classpath for --v2")
+	private String v2Classpath;
+	@Option(names = "--v1-pom", paramLabel = "<path>",
+		description = "A --pom for --v1")
+	private Path v1Pom;
+	@Option(names = "--v2-pom", paramLabel = "<path>",
+		description = "A --pom for --v2")
+	private Path v2Pom;
+	@Option(names = "--v1-extractor", paramLabel = "<extractor>",
+		description = "An --extractor for --v1")
+	private ExtractorType v1ExtractorType;
+	@Option(names = "--v2-extractor", paramLabel = "<extractor>",
+		description = "An --extractor for --v2")
+	private ExtractorType v2ExtractorType;
 	@Option(names = "--ignored", paramLabel = "<path>",
 		description = "Do not report the breaking changes listed in the given CSV file; " +
 			"this CSV file shares the same structure as the one produced by --format CSV")
 	private Path ignoredCsv;
+	@Option(names = "--config", paramLabel = "<path>",
+		description = "A roseau.yaml config file; overridden by CLI options")
+	private Path config;
 	@Option(names = "--fail-on-bc",
 		description = "Return 1 if breaking changes are detected")
 	private boolean failMode;
 	@Option(names = "--plain",
 		description = "Disable ANSI colors, output plain text")
 	private boolean plain;
-	@Option(names = "--verbose",
-		description = "Print debug information")
+	@Option(names = {"-v", "--verbose"},
+		description = "Increase verbosity (-v, -vv).")
+	private boolean[] verbosity;
 	private boolean verbose;
-	@Option(names = "--github-action", hidden = true)
-	private boolean githubActionMode;
+	private boolean debug;
 
 	private static final String RED_TEXT = "\u001B[31m";
 	private static final String BOLD = "\u001B[1m";
@@ -131,66 +150,37 @@ public final class RoseauCLI implements Callable<Integer> {
 		return report;
 	}
 
-	private Set<Path> buildClasspath() {
-		Set<Path> classpath = userClasspath != null
-			? Arrays.stream(userClasspath.split(File.pathSeparator))
+	private static Set<Path> buildClasspathFromString(String cp) {
+		return cp != null
+			? Arrays.stream(cp.split(File.pathSeparator))
+			.filter(p -> p.endsWith(".jar"))
 			.map(Path::of)
-			.collect(Collectors.toCollection(HashSet::new))
-			: new HashSet<>();
-
-		if (pom != null && Files.isRegularFile(pom)) {
-			Stopwatch sw = Stopwatch.createStarted();
-			MavenClasspathBuilder classpathBuilder = new MavenClasspathBuilder();
-			classpath.addAll(classpathBuilder.buildClasspath(pom));
-			printVerbose("Extracting classpath from %s took %dms".formatted(
-				pom, sw.elapsed().toMillis()));
-		}
-
-		if (classpath.isEmpty()) {
-			print("Warning: no classpath provided, results may be inaccurate");
-		} else {
-			printVerbose("Classpath: %s".formatted(classpath));
-		}
-
-		return classpath;
+			.collect(Collectors.toSet())
+			: Set.of();
 	}
 
-	private void writeReport(API api, RoseauReport report) {
-		// FIXME once we can write multiple reports at once
-		if (githubActionMode) {
-			writeGithubActionReport(api, report);
-			return;
-		}
-
-		if (reportPath == null) {
-			return;
-		}
-
+	private void writeReport(RoseauReport report, BreakingChangesFormatterFactory format, Path path) {
 		try {
+			if (path.getParent() != null) {
+				Files.createDirectories(path.getParent());
+			}
 			BreakingChangesFormatter fmt = BreakingChangesFormatterFactory.newBreakingChangesFormatter(format);
-			Files.writeString(reportPath, fmt.format(api, report), StandardCharsets.UTF_8);
-			print("Report has been written to %s".formatted(reportPath));
+			Files.writeString(path, fmt.format(report), StandardCharsets.UTF_8);
+			printVerbose("Report has been written to %s".formatted(path));
 		} catch (IOException e) {
-			throw new RoseauException("Error writing report to %s".formatted(reportPath), e);
+			throw new RoseauException("Error writing report to %s".formatted(path), e);
 		}
 	}
 
-	private void writeApiReport(API api) {
+	private void writeApiReport(API api, Path apiPath) {
 		try {
-			api.getLibraryTypes().writeJson(apiJson);
-			print("API has been written to %s".formatted(apiJson));
+			if (apiPath.getParent() != null) {
+				Files.createDirectories(apiPath.getParent());
+			}
+			api.getLibraryTypes().writeJson(apiPath);
+			printVerbose("API has been written to %s".formatted(apiPath));
 		} catch (IOException e) {
-			throw new RoseauException("Error writing API to %s".formatted(apiJson), e);
-		}
-	}
-
-	private void writeGithubActionReport(API api, RoseauReport report) {
-		try {
-			Files.writeString(Path.of("report.csv"), new CsvFormatter().format(api, report));
-			Files.writeString(Path.of("report.html"), new HtmlFormatter().format(api, report));
-			Files.writeString(Path.of("report.md"), new MdFormatter().format(api, report));
-		} catch (IOException e) {
-			throw new RoseauException("Error writing GHA reports", e);
+			throw new RoseauException("Error writing API to %s".formatted(apiPath), e);
 		}
 	}
 
@@ -203,12 +193,13 @@ public final class RoseauCLI implements Callable<Integer> {
 				member.getContainingType().getQualifiedName().equals(bc.impactedType().getQualifiedName());
 
 		if (plain) {
-			return String.format("%s %s%s%n\t%s:%s", bc.kind(),
+			return "%s %s%s%n\t%s:%s".formatted(
+				bc.kind(),
 				bc.impactedSymbol().getQualifiedName(),
 				symbolInType ? "" : " in " + bc.impactedType().getQualifiedName(),
 				location.file(), location.line());
 		} else {
-			return String.format("%s %s%s%n\t%s:%s",
+			return "%s %s%s%n\t%s:%s".formatted(
 				RED_TEXT + BOLD + bc.kind() + RESET,
 				UNDERLINE + bc.impactedSymbol().getQualifiedName() + RESET,
 				symbolInType ? "" : " in " + bc.impactedType().getQualifiedName(),
@@ -216,21 +207,17 @@ public final class RoseauCLI implements Callable<Integer> {
 		}
 	}
 
-	private List<BreakingChange> filterIgnoredBCs(RoseauReport report) {
-		if (ignoredCsv == null) {
-			return report.breakingChanges();
-		}
-
+	private List<BreakingChange> filterIgnoredBCs(RoseauReport report, Path ignoredPath) {
 		try {
 			record Ignored(String type, String symbol, BreakingChangeKind kind) {}
-			List<String> lines = Files.readAllLines(ignoredCsv);
+			List<String> lines = Files.readAllLines(ignoredPath);
 			List<Ignored> ignored = lines.stream()
 				.filter(line -> !line.equals(CsvFormatter.HEADER))
 				.map(line -> {
 					String[] fields = line.split(";");
 					if (fields.length < 3 ||
 						Arrays.stream(BreakingChangeKind.values()).map(Enum::name).noneMatch(name -> name.equals(fields[2]))) {
-						printErr("Malformed line %s ignored in %s".formatted(line, ignoredCsv));
+						printErr("Malformed line %s ignored in %s".formatted(line, ignoredPath));
 						return null;
 					} else {
 						return new Ignored(fields[0], fields[1], BreakingChangeKind.valueOf(fields[2]));
@@ -246,78 +233,155 @@ public final class RoseauCLI implements Callable<Integer> {
 						bc.kind() == ign.kind()))
 				.toList();
 		} catch (IOException e) {
-			throw new RoseauException("Couldn't read CSV file %s".formatted(ignoredCsv), e);
+			throw new RoseauException("Couldn't read CSV file %s".formatted(ignoredPath), e);
 		}
 	}
 
-	private void checkArguments() {
-		if (v1 == null || !Files.exists(v1)) {
-			throw new RoseauException("Cannot find v1: %s".formatted(v1));
+	private void checkOptions(RoseauOptions options) {
+		Path v1Path = options.v1().location();
+		if (v1Path == null || !Files.exists(v1Path)) {
+			throw new RoseauException("Cannot find v1: %s".formatted(v1Path));
 		}
 
-		if (mode.api && apiJson == null) {
-			throw new RoseauException("--api-json required in --api mode");
+		if (mode.api && options.v1().apiReport() == null) {
+			throw new RoseauException("Path to a JSON file required in --api mode");
 		}
 
-		if (mode.diff && (v2 == null || !Files.exists(v2))) {
-			throw new RoseauException("Cannot find v2: %s".formatted(v2));
+		Path v2Path = options.v2().location();
+		if (mode.diff && (v2Path == null || !Files.exists(v2Path))) {
+			throw new RoseauException("Cannot find v2: %s".formatted(v2Path));
 		}
 
-		if (pom != null && !Files.isRegularFile(pom)) {
-			throw new RoseauException("Cannot find pom: %s".formatted(pom));
+		if (reportPath != null && format == null) {
+			throw new RoseauException("--format required with --report");
 		}
 
-		if (ignoredCsv != null && !Files.isRegularFile(ignoredCsv)) {
-			throw new RoseauException("Cannot find ignored CSV: %s".formatted(ignoredCsv));
+		Path v1PomPath = options.v1().classpath().pom();
+		if (v1PomPath != null && !Files.isRegularFile(v1PomPath)) {
+			throw new RoseauException("Cannot find pom: %s".formatted(v1PomPath));
 		}
+
+		Path v2PomPath = options.v2().classpath().pom();
+		if (v2PomPath != null && !Files.isRegularFile(v2PomPath)) {
+			throw new RoseauException("Cannot find pom: %s".formatted(v2PomPath));
+		}
+
+		Path pomPath = options.common().classpath().pom();
+		if (pomPath != null && !Files.isRegularFile(pomPath)) {
+			throw new RoseauException("Cannot find pom: %s".formatted(pomPath));
+		}
+
+		Path ignoredPath = options.ignore();
+		if (ignoredPath != null && !Files.isRegularFile(ignoredPath)) {
+			throw new RoseauException("Cannot find ignored CSV: %s".formatted(ignoredPath));
+		}
+	}
+
+	private RoseauOptions makeCliOptions() {
+		// No CLI option (yet?) for API exclusions
+		RoseauOptions.Exclude noExclusions = new RoseauOptions.Exclude(List.of(), List.of());
+		RoseauOptions.Common commonCli = new RoseauOptions.Common(
+			extractorType,
+			new RoseauOptions.Classpath(pom, buildClasspathFromString(classpath)),
+			noExclusions
+		);
+		RoseauOptions.Library v1Cli = new RoseauOptions.Library(
+			v1, v1ExtractorType, new RoseauOptions.Classpath(v1Pom, buildClasspathFromString(v1Classpath)),
+			noExclusions, apiJson
+		);
+		RoseauOptions.Library v2Cli = new RoseauOptions.Library(
+			v2, v2ExtractorType, new RoseauOptions.Classpath(v2Pom, buildClasspathFromString(v2Classpath)),
+			noExclusions, null
+		);
+		List<RoseauOptions.Report> reportsCli = (reportPath != null && format != null)
+			? List.of(new RoseauOptions.Report(reportPath, format))
+			: List.of();
+		return new RoseauOptions(commonCli, v1Cli, v2Cli, ignoredCsv, reportsCli);
+	}
+
+	private void doApi(Library library, RoseauOptions.Library libraryOptions) {
+		if (library.getClasspath().isEmpty()) {
+			printErr("Warning: no classpath provided for %s, results may be inaccurate".formatted(library.getLocation()));
+		}
+		API api = buildAPI(library);
+		if (libraryOptions.apiReport() != null) {
+			writeApiReport(api, libraryOptions.apiReport());
+		}
+	}
+
+	private boolean doDiff(Library v1, Library v2, RoseauOptions options) {
+		if (v1.getClasspath().isEmpty()) {
+			printErr("Warning: no classpath provided for %s, results may be inaccurate".formatted(v1.getLocation()));
+		}
+		if (v2.getClasspath().isEmpty()) {
+			printErr("Warning: no classpath provided for %s, results may be inaccurate".formatted(v2.getLocation()));
+		}
+		RoseauReport report = diff(v1, v2);
+		Path ignoreFile = options.ignore();
+		List<BreakingChange> bcs = ignoreFile != null && Files.isRegularFile(ignoreFile)
+			? filterIgnoredBCs(report, ignoreFile)
+			: report.breakingChanges();
+
+		if (bcs.isEmpty()) {
+			print("No breaking changes found.");
+		} else {
+			print(
+				bcs.stream()
+					.map(this::format)
+					.collect(Collectors.joining(System.lineSeparator()))
+			);
+		}
+
+		if (options.v1().apiReport() != null) {
+			writeApiReport(report.v1(), options.v1().apiReport());
+		}
+		if (options.v2().apiReport() != null) {
+			writeApiReport(report.v2(), options.v2().apiReport());
+		}
+		options.reports().forEach(reportOption ->
+			writeReport(report, reportOption.format(), reportOption.file())
+		);
+
+		return !bcs.isEmpty();
 	}
 
 	@Override
 	public Integer call() {
 		try {
-			if (verbose) {
-				Configurator.setAllLevels(LogManager.getRootLogger().getName(), Level.DEBUG);
+			if (verbosity != null) {
+				this.verbose = verbosity.length > 0;
+				this.debug = verbosity.length > 1;
 			}
 
-			checkArguments();
-			List<Path> classpath = buildClasspath().stream().toList();
-			Library.Builder builder1 = Library.builder()
-				.location(v1)
-				.classpath(classpath);
-			if (extractorType != null) {
-				builder1.extractorType(extractorType);
+			if (debug) {
+				Configurator.setAllLevels(LogManager.getRootLogger().getName(), Level.DEBUG);
+			} else if (verbose) {
+				Configurator.setAllLevels(LogManager.getRootLogger().getName(), Level.INFO);
 			}
-			Library libraryV1 = builder1.build();
+
+			RoseauOptions cliOptions = makeCliOptions();
+			RoseauOptions fileOptions = config != null && Files.isRegularFile(config)
+				? RoseauOptions.load(config)
+				: RoseauOptions.newDefault();
+			RoseauOptions options = fileOptions.mergeWith(cliOptions);
+			checkOptions(options);
+			printDebug("Options are " + options);
 
 			if (mode.api) {
-				API api = buildAPI(libraryV1);
-				writeApiReport(api);
+				Library libraryV1 = options.v1().mergeWith(options.common()).toLibrary();
+				printDebug("v1 = " + libraryV1);
+				doApi(libraryV1, options.v1());
 			}
 
 			if (mode.diff) {
-				Library.Builder builder2 = Library.builder()
-					.location(v2)
-					.classpath(classpath);
-				if (extractorType != null) {
-					builder2.extractorType(extractorType);
-				}
-				Library libraryV2 = builder2.build();
-				RoseauReport report = diff(libraryV1, libraryV2);
-				List<BreakingChange> bcs = filterIgnoredBCs(report);
+				Library libraryV1 = options.v1().mergeWith(options.common()).toLibrary();
+				Library libraryV2 = options.v2().mergeWith(options.common()).toLibrary();
+				printDebug("v1 = " + libraryV1);
+				printDebug("v2 = " + libraryV2);
+				boolean breaking = doDiff(libraryV1, libraryV2, options);
 
-				if (bcs.isEmpty()) {
-					print("No breaking changes found.");
-				} else {
-					print(
-						bcs.stream()
-							.map(this::format)
-							.collect(Collectors.joining(System.lineSeparator()))
-					);
-					writeReport(report.v1(), report);
-
-					if (failMode) {
-						return 1;
-					}
+				if (breaking && failMode) {
+					return 1;
 				}
 			}
 
@@ -338,6 +402,12 @@ public final class RoseauCLI implements Callable<Integer> {
 
 	private void printVerbose(String message) {
 		if (verbose) {
+			print(message);
+		}
+	}
+
+	private void printDebug(String message) {
+		if (debug) {
 			print(message);
 		}
 	}
